# Tinix_Alloc

./: Cargo.toml
src/: allocator.rs  heap.rs  lib.rs
src/allocators/: mod.rs
src/memory/: mod.rs
src/paging/: mapper.rs  mod.rs
src/structures/: array.rs  mod.rs
